--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,19 +19,18 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
+    "noEmit": true,
     "removeComments": true,
     "baseUrl": "src",
     "types": [
       "node"
     ]
   },
-
   "include": [
     "src"
   ],
   "exclude": [
-    "node_modules", "dist"
+    "node_modules",
+    "dist"
   ]
-
 }
