--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "inversify": "^5.0.1",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^3.9.6"
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
@@ -17,9 +19,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
-    "inversify": "^5.0.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
+    "typescript": "^3.9.6",
     "redux-logger": "^3.0.6"
   },
   "scripts": {
