--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "inversify": "^5.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "inversify": "^5.0.1",
-    "reflect-metadata": "^0.1.13",
-    "react-redux": "^7.2.0"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
@@ -19,12 +18,19 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "html-webpack-plugin": "^4.3.0",
+    "redux-logger": "^3.0.6",
+    "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
-    "redux-logger": "^3.0.6"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/react-scripts start",
-    "build": "./node_modules/.bin/react-scripts build",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --hot --watch",
+    "build": "./node_modules/.bin/webpack -p --progress --profile",
     "eject": "./node_modules/.bin/react-scripts eject"
   },
   "browserslist": {
