Typescript awesome loader

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,7 @@
     "isolatedModules": true,
     "noEmit": false,
     "removeComments": true,
+    "sourceMap": true,
     "baseUrl": "src",
     "types": [
       "node",
