--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
+    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
     "redux-logger": "^3.0.6",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
