--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
     "redux-logger": "^3.0.6",
     "style-loader": "^1.2.1",
